[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]

[features]
default = ["iced_webp/default"]
tokio = ["iced_webp/tokio", "iced/tokio"]

[dependencies]
iced_webp = { path = "../", default-features = false }
iced = { version = "0.13", features = [ "image" ] }
